src/test/deca/context/valid/test_class/return_int.deca
// Description:
//    Class with a method returning a int.
// Results:
//    3
//
// History:
//    Created on 16/01/2025

class A {
    int retour() {
        return 3;
    }
}

{
    A a = new A() ;
    println(a.retour()) ;
}