src/test/deca/context/invalid/test_class/instanceof_int_droite.deca
// Description:
//    Unit Test Cast void
// Results:
//    Can't use instanceof with this type int
//
// History:
//    Created on 16/01/2025

class A { }
class C { }

{
    A a = new A();
    if (a instanceof int) { 
        println("Erreur");
    }
}
